TypeAController toegevoegd: upload een pdf document en verwerk die met een console app

--- a/ConvertPdf/ConvertPdf/appsettings.example.json
+++ b/ConvertPdf/ConvertPdf/appsettings.example.json
@@ -6,5 +6,6 @@
     }
   },
   "ApiKey": "example-replace-please",
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConvertPdfDir": "C:\\Temp\\ConvertPdf"
 }
